# backend-workshop

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
backend/: README.md
backend/src/snaps/controller/: item_controllers.py
backend/src/snaps/database/: inmemory.py
backend/src/snaps/service/: item_services.py
src/: main.py
src/snaps/: main.py  schemas.py
src/snaps/database/: inmemory.py
src/snaps/models/: schemas.py
src/snaps/router/: item_router.py
tests/: test_app.py
