[project]
name = "backend-workshop"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "fastapi[standard]>=0.115.11",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.9",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
