[project]
name = "snaps"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "fastapi[standard]>=0.115.11",
]

[dependency-groups]
dev = [
    "coverage>=7.6.12",
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "ruff>=0.9.9",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
